add thw while loop for the rnd number

--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
 </head>
 
 <body>
-    <input type="number" required>
-    <input type="number" required>
-    <input type="number" required>
-    <input type="number" required>
-    <input type="number" required>
+    <div class="container">
+        <h1 id="numbers">Memorizza i numeri</h1>
+        <button>Play</button>
+        <input type="number" required>
+        <input type="number" required>
+        <input type="number" required>
+        <input type="number" required>
+        <input type="number" required>
+    </div>
     
     <script type="text/javascript" src="./js/script.js"></script>
-    <script type="text/javascript" src="./js/utility.js"></script>
+    <script src="./js/utility.js"></script>
 </body>
 
 </html>
