try to comparison the array

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 <body>
     <div class="container">
         <h1 id="numbers">Memorizza i numeri</h1>
-        <button>Play</button>
-        <input type="number" required>
-        <input type="number" required>
-        <input type="number" required>
-        <input type="number" required>
-        <input type="number" required>
+        
+        <input type="number" id="one" required>
+        <input type="number" id="two" required>
+        <input type="number" id="tree" required>
+        <input type="number" id="four" required>
+        <input type="number" id="five" required>
+        <button>Verifica</button>
     </div>
     
     <script type="text/javascript" src="./js/script.js"></script>
