--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <input type="number" id="four" required>
         <input type="number" id="five" required>
         <button>Verifica</button>
+        <div class="results">
+            
+        </div>
     </div>
     
     <script type="text/javascript" src="./js/script.js"></script>
